    (Akira AJISAKA via cnauroth)

    HADOOP-10739. Renaming a file into a directory containing the same
    filename results in a confusing I/O error (chang li via jlowe)

    HADOOP-10533 S3 input stream NPEs in MapReduce join (stevel)

    HADOOP-10419 BufferedFSInputStream NPEs on getPos() on a closed stream
    (stevel)

    HADOOP-10801 dead link in site.xml (Akira AJISAKA via stevel)

  BREAKDOWN OF HADOOP-10514 SUBTASKS AND RELATED JIRAS

    HADOOP-10520. Extended attributes definition and FileSystem APIs for
    extended attributes. (Yi Liu via wang)

    HADOOP-10546. Javadoc and other small fixes for extended attributes in
    hadoop-common. (Charles Lamb via wang)

    HADOOP-10521. FsShell commands for extended attributes. (Yi Liu via wang)

    HADOOP-10548. Improve FsShell xattr error handling and other fixes. (Charles Lamb via umamahesh)

    HADOOP-10567. Shift XAttr value encoding code out for reuse. (Yi Liu via umamahesh)

    HADOOP-10621. Remove CRLF for xattr value base64 encoding for better display.(Yi Liu via umamahesh)

    HADOOP-10575. Small fixes for XAttrCommands and test. (Yi Liu via umamahesh)

    HADOOP-10561. Copy command with preserve option should handle Xattrs.
    (Yi Liu via cnauroth)

    HADOOP-10590. ServiceAuthorizationManager is not threadsafe. (Benoy Antony via vinayakumarb)

    HADOOP-10711. Cleanup some extra dependencies from hadoop-auth. (rkanter via tucu)

    HADOOP-10479. Fix new findbugs warnings in hadoop-minikdc.
    (Swarnim Kulkarni via wheat9)

    HADOOP-10715. Remove public GraphiteSink#setWriter (Babak Behzad via raviprak)

    HADOOP-10710. hadoop.auth cookie is not properly constructed according to 
    RFC2109. (Juan Yu via tucu)

    HADOOP-10864. Tool documentenation is broken. (Akira Ajisaka
    via Arpit Agarwal)

    HADOOP-10872. TestPathData fails intermittently with "Mkdirs failed
    to create d1". (Yongjun Zhang via Arpit Agarwal)

Release 2.4.1 - 2014-06-23 

  INCOMPATIBLE CHANGES
